[gd_scene load_steps=34 format=3 uid="uid://15afiqn2mr21"]

[ext_resource type="PackedScene" uid="uid://c5cke4cm02um7" path="res://scenes/character/plant/plant_000_base.tscn" id="1_rtguv"]
[ext_resource type="Texture2D" uid="uid://beptqgafsc8dp" path="res://assets/reanim/CobCannon_wheel.png" id="2_1lbhp"]
[ext_resource type="Script" uid="uid://d4decu0vw6c8b" path="res://scripts/character/plant/plant_048_cob_cannon.gd" id="2_jw2jr"]
[ext_resource type="Texture2D" uid="uid://c650cxd5fsti8" path="res://assets/reanim/CobCannon_log.png" id="3_vaxr0"]
[ext_resource type="Texture2D" uid="uid://dhpv2m52i8tnu" path="res://assets/reanim/CobCannon_fuse.png" id="4_jw2jr"]
[ext_resource type="Texture2D" uid="uid://dev0upxoidgky" path="res://assets/reanim/CobCannon_husk4.png" id="5_6s6ux"]
[ext_resource type="Texture2D" uid="uid://bw1eaerjcpf15" path="res://assets/reanim/CobCannon_husk3.png" id="6_q5hnh"]
[ext_resource type="Texture2D" uid="uid://dnkk3vyykr511" path="res://assets/reanim/CobCannon_husk2.png" id="7_sqcik"]
[ext_resource type="Texture2D" uid="uid://c0b2nxclwkjxn" path="res://assets/reanim/CobCannon_cob.png" id="7_vaxr0"]
[ext_resource type="Texture2D" uid="uid://dg8oaxgqbdu2g" path="res://assets/reanim/CobCannon_husk1.png" id="8_2gymn"]
[ext_resource type="Animation" uid="uid://d07tekmuhcwct" path="res://animation/character/plant/048_cob_cannon/CobCannon_charge.tres" id="10_gp4se"]
[ext_resource type="Texture2D" uid="uid://bjfgnxqtsjeal" path="res://assets/reanim/CobCannon_blink1.png" id="11_q5hnh"]
[ext_resource type="Animation" uid="uid://b4x146r6tjdqi" path="res://animation/character/plant/048_cob_cannon/CobCannon_idle.tres" id="11_ytr4m"]
[ext_resource type="Animation" uid="uid://2idek3cowas8" path="res://animation/character/plant/048_cob_cannon/CobCannon_shooting.tres" id="12_i0iy0"]
[ext_resource type="Animation" uid="uid://bjjcvhwaghocs" path="res://animation/character/plant/048_cob_cannon/CobCannon_unarmed_idle.tres" id="13_23ndk"]
[ext_resource type="Texture2D" uid="uid://dbniigaxrufrg" path="res://assets/image/main_game_item/CobCannon_target.png" id="16_q5hnh"]
[ext_resource type="Script" uid="uid://stwigyda6xaj" path="res://scripts/character/components/p_048_cob_cannon_target.gd" id="17_sqcik"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6s6ux"]
size = Vector2(130.75, 79.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5hnh"]
size = Vector2(40, 80)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q5hnh"]
radius = 39.99788
height = 125.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lek30"]
_data = {
&"CobCannon_charge": ExtResource("10_gp4se"),
&"CobCannon_idle": ExtResource("11_ytr4m"),
&"CobCannon_shooting": ExtResource("12_i0iy0"),
&"CobCannon_unarmed_idle": ExtResource("13_23ndk")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jw2jr"]
animation = &"CobCannon_charge"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6s6ux"]
animation = &"CobCannon_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q5hnh"]
animation = &"CobCannon_shooting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sqcik"]
animation = &"CobCannon_unarmed_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2gymn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ptjgs"]
advance_mode = 2
advance_expression = "is_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gp4se"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ytr4m"]
advance_mode = 2
advance_expression = "is_charge"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i0iy0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_23ndk"]
states/CobCannon_charge/node = SubResource("AnimationNodeAnimation_jw2jr")
states/CobCannon_charge/position = Vector2(394, 181)
states/CobCannon_idle/node = SubResource("AnimationNodeAnimation_6s6ux")
states/CobCannon_idle/position = Vector2(394, 60)
states/CobCannon_shooting/node = SubResource("AnimationNodeAnimation_q5hnh")
states/CobCannon_shooting/position = Vector2(641, 60)
states/CobCannon_unarmed_idle/node = SubResource("AnimationNodeAnimation_sqcik")
states/CobCannon_unarmed_idle/position = Vector2(641, 181)
transitions = ["Start", "CobCannon_idle", SubResource("AnimationNodeStateMachineTransition_2gymn"), "CobCannon_idle", "CobCannon_shooting", SubResource("AnimationNodeStateMachineTransition_ptjgs"), "CobCannon_shooting", "CobCannon_unarmed_idle", SubResource("AnimationNodeStateMachineTransition_gp4se"), "CobCannon_unarmed_idle", "CobCannon_charge", SubResource("AnimationNodeStateMachineTransition_ytr4m"), "CobCannon_charge", "CobCannon_idle", SubResource("AnimationNodeStateMachineTransition_i0iy0")]
graph_offset = Vector2(52, -18)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_lek30"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_35v1m"]
graph_offset = Vector2(-122.912, 36.0597)
nodes/output/position = Vector2(820, 200)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_23ndk")
nodes/StateMachine/position = Vector2(300, 180)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_lek30")
nodes/TimeScale/position = Vector2(620, 180)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"StateMachine"]

[node name="Plant048CobCannon" instance=ExtResource("1_rtguv")]
script = ExtResource("2_jw2jr")
charge_cd = 35.0
is_bullet = true
is_attack = false
is_charge = false
plant_type = 48

[node name="Shadow" parent="." index="0"]
position = Vector2(44, -1.5)
scale = Vector2(2.02326, 0.916667)

[node name="BodyCorrect" parent="Body" index="0"]
position = Vector2(-37, -75)

[node name="Anim_unarmed_idle" type="Sprite2D" parent="Body/BodyCorrect" index="0"]
visible = false
centered = false

[node name="Anim_idle" type="Sprite2D" parent="Body/BodyCorrect" index="1"]
centered = false

[node name="Anim_shooting" type="Sprite2D" parent="Body/BodyCorrect" index="2"]
visible = false
centered = false

[node name="Anim_charge" type="Sprite2D" parent="Body/BodyCorrect" index="3"]
visible = false
centered = false

[node name="Anim_blink" type="Sprite2D" parent="Body/BodyCorrect" index="4"]
visible = false
centered = false

[node name="CobCannon_backwheels" type="Sprite2D" parent="Body/BodyCorrect" index="5"]
position = Vector2(31.7, -5.7)
scale = Vector2(0.72, 0.72)
texture = ExtResource("2_1lbhp")
centered = false

[node name="CobCannon_backwheels2" type="Sprite2D" parent="Body/BodyCorrect" index="6"]
position = Vector2(98.6, -5.7)
scale = Vector2(0.72, 0.72)
texture = ExtResource("2_1lbhp")
centered = false

[node name="CobCannon_log2" type="Sprite2D" parent="Body/BodyCorrect" index="7"]
position = Vector2(15.2, 11.206648)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_vaxr0")
centered = false

[node name="CobCannon_fuse" type="Sprite2D" parent="Body/BodyCorrect" index="8"]
position = Vector2(-12.519945, 19.593079)
rotation = -0.7857417
scale = Vector2(0.79996675, 0.80009973)
skew = -0.0013342251
texture = ExtResource("4_jw2jr")
centered = false

[node name="CobCannon_husk4" type="Sprite2D" parent="Body/BodyCorrect" index="9"]
position = Vector2(51.19668, 5.3199453)
scale = Vector2(1.0001329, 0.9999003)
texture = ExtResource("5_6s6ux")
centered = false

[node name="CobCannon_husk4_2" type="Sprite2D" parent="Body/BodyCorrect" index="10"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(51.4, 5.3)
texture = ExtResource("5_6s6ux")
centered = false

[node name="CobCannon_husk3" type="Sprite2D" parent="Body/BodyCorrect" index="11"]
position = Vector2(67.2, -8.276731)
scale = Vector2(0.80009973, 0.79993355)
texture = ExtResource("6_q5hnh")
centered = false

[node name="CobCannon_husk3_2" type="Sprite2D" parent="Body/BodyCorrect" index="12"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(67.3, -8.1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_q5hnh")
centered = false

[node name="CobCannon_cob" type="Sprite2D" parent="Body/BodyCorrect" index="13"]
position = Vector2(24.093351, -6.0667577)
scale = Vector2(0.80009973, 0.79993355)
texture = ExtResource("7_vaxr0")
centered = false

[node name="CobCannon_husk2" type="Sprite2D" parent="Body/BodyCorrect" index="14"]
position = Vector2(13.4966755, 0.3232696)
scale = Vector2(0.80009973, 0.79993355)
texture = ExtResource("7_sqcik")
centered = false

[node name="Anim_face" type="Sprite2D" parent="Body/BodyCorrect" index="15"]
position = Vector2(11.796676, -17.373405)
scale = Vector2(0.80009973, 0.79993355)
texture = ExtResource("8_2gymn")
centered = false

[node name="CobCannon_blink" type="Sprite2D" parent="Body/BodyCorrect" index="16"]
visible = false
position = Vector2(51.8, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_q5hnh")
centered = false

[node name="CobCannon_log1" type="Sprite2D" parent="Body/BodyCorrect" index="17"]
position = Vector2(6.2, 35.003323)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_vaxr0")
centered = false

[node name="CobCannon_outerwheels" type="Sprite2D" parent="Body/BodyCorrect" index="18"]
position = Vector2(13, 31.9)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_1lbhp")
centered = false

[node name="CobCannon_outerwheels2" type="Sprite2D" parent="Body/BodyCorrect" index="19"]
position = Vector2(87.3, 31.9)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_1lbhp")
centered = false

[node name="Marker2DBullet" type="Marker2D" parent="Body/BodyCorrect" index="20"]
position = Vector2(37, -138)

[node name="Area2D" type="Area2D" parent="Body" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Area2D" index="0"]
position = Vector2(43.625, -38.75)
shape = SubResource("RectangleShape2D_6s6ux")

[node name="CollisionShape2D" parent="HurtBoxComponent/HurtBoxDetection" index="0"]
shape = SubResource("RectangleShape2D_q5hnh")

[node name="CollisionShape2D" parent="HurtBoxComponent/HurtBoxReal" index="0"]
position = Vector2(41.000004, -40.000004)
rotation = 1.5810992
shape = SubResource("CapsuleShape2D_q5hnh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
libraries = {
&"": SubResource("AnimationLibrary_lek30")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="9"]
tree_root = SubResource("AnimationNodeBlendTree_35v1m")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/TimeScale/scale = 1.0

[node name="CobCannonTarget" type="Sprite2D" parent="." index="10"]
visible = false
position = Vector2(208, 1)
texture = ExtResource("16_q5hnh")
script = ExtResource("17_sqcik")

[connection signal="input_event" from="Body/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Body/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Body/Area2D" to="." method="_on_area_2d_mouse_exited"]
